# Assessment-of-evaluation-metrics-in-agentic-llm-system

./: .gitignore  README.md  agent.ipynb  agent.py  agent_evals.ipynb  blablador.py  embaddings.ipynb  mcp_agent.ipynb  mcp_config.json  mcp_server.py  pyproject.toml  requirements.txt  test_agent.py
.deepeval/: .deepeval-cache.json  .deepeval_telemetry.txt  .latest_run_full.json  .latest_test_run.json
chroma_db/75a13c28-263b-495a-93ff-95efa31ed14b/: index_metadata.pickle
