[project]
name = "langgraph-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "agentevals>=0.0.9",
    "chromadb>=1.5.9",
    "deepeval>=4.0.5",
    "fastmcp>=3.3.1",
    "ipykernel>=7.2.0",
    "langchain>=1.3.2",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.0",
    "langchain-mcp-adapters>=0.2.2",
    "langchain-openai>=1.2.1",
    "langgraph>=1.2.0",
    "langsmith>=0.8.5",
    "litellm>=1.87.0",
    "mcp>=1.27.1",
    "openevals>=0.2.0",
    "python-dotenv>=1.2.2",
    "typing-extensions>=4.15.0",
]
